--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "codemirror": "^5.58.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "sql-formatter": "^2.3.3",
+    "vue": "^2.6.11",
+    "vue-codemirror": "^4.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
